--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".IntroActivity" />
-        <activity android:name=".Boellehat"></activity>
+        <activity android:name=".Boellehat" />
+        <activity android:name=".ElevAfventerActivity" />
+        <activity android:name=".ElevInsufflatorActivity"></activity>
     </application>
 
 </manifest>
