Tilføjet dummy-aktivitet til opretScenarie (struktur skal designes) + onClickListener
Signed-off-by: hjaltebaekgaard <32597837+hjaltebaekgaard@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         </activity>
         <activity android:name=".IntroActivity" />
         <activity android:name=".ElevAfventerActivity" />
-        <activity android:name=".ElevInsufflatorActivity"></activity>
+        <activity android:name=".ElevInsufflatorActivity" />
+        <activity android:name=".VaelgScenarieActivity">
+
+        </activity>
+        <activity android:name=".OpretScenarie"></activity>
     </application>
 
 </manifest>
