Ret manglende luk på activity i AndroidManifest.xml
Signed-off-by: petertbdtu <s175210@student.dtu.dk>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".VaelgRolleActivity" />
         <activity android:name=".VaelgOpgaveActivity"/>
         <activity android:name=".VaelgScenarieActivity"/>
-        <activity android:name=".OpretScenarie"></>
+        <activity android:name=".OpretScenarie"/>
     </application>
 
 </manifest>
