--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".IntroActivity"
+        <activity
+            android:name=".IntroActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,20 +18,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".ElevAfventerActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".ElevInsufflatorActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".VaelgRolleActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".VaelgOpgaveActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".VaelgScenarieActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".OpretScenarie"
-            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ElevAfventerActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ElevInsufflatorActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".VaelgRolleActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".VaelgOpgaveActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".VaelgScenarieActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".OpretScenarie"
+            android:screenOrientation="landscape" />
+        <activity android:name=".activity_vaelg_tablet"></activity>
     </application>
 
 </manifest>
