Tilføjet recyclerview til visning af scenarieliste (placeholder liste)
Signed-off-by: hjaltebaekgaard <32597837+hjaltebaekgaard@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         <activity
             android:name=".OpretScenarie"
             android:screenOrientation="landscape" />
-        <activity android:name=".activity_vaelg_tablet"></activity>
+        <activity
+            android:name=".VaelgTablet"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
