--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity
             android:name=".VaelgTablet"
             android:screenOrientation="landscape" />
+        <activity android:name=".redigerAktivitetActivity"></activity>
     </application>
 
 </manifest>
