--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,12 @@
         <activity
             android:name=".VaelgTablet"
             android:screenOrientation="landscape" />
-        <activity android:name=".redigerAktivitetActivity"></activity>
+        <activity
+            android:name=".redigerAktivitetActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".TabletAktiviteter"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
