--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening">
 
     <application
+        android:name=".Applikation"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
