--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening">
 
     <application
-        android:name=".Applikation"
+        android:name=".InsufflatorSimApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -38,7 +38,7 @@
             android:name=".VaelgScenarieActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".OpretScenarie"
+            android:name=".OpretScenarieActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".VaelgTablet"
