--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".InsufflatorSimApp"
@@ -22,9 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape" />
         <activity
             android:name=".ElevAfventerActivity"
             android:screenOrientation="landscape" />
@@ -49,7 +46,7 @@
         <activity
             android:name=".RedigerAktivitetActivity"
             android:screenOrientation="landscape" />
-
+        <!--<activity android:name=".TestDataLag"></activity>-->
     </application>
 
 </manifest>
