--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ElevAfventerActivity"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".ElevInsufflatorActivity"
+            android:name=".InsufflatorVisningActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".VaelgRolleActivity"
