implementeret recyclerview til logEntries - mangler backend, håndtering af dateTime og vis scenarie + dialog til edit af comment
Signed-off-by: hjaltebaekgaard <32597837+hjaltebaekgaard@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity
             android:name=".VaelgTablet"
             android:screenOrientation="landscape" />
-        <!--<activity android:name=".TestDataLag"></activity>-->
+        <!-- <activity android:name=".TestDataLag"></activity> -->
+        <activity android:name=".ShowLogsActivity"></activity>
     </application>
 
 </manifest>
