--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,8 @@
         <activity
             android:name=".VaelgTablet"
             android:screenOrientation="landscape" />
-        <!-- <activity android:name=".TestDataLag"></activity> -->
-        <activity android:name=".ShowLogsActivity"></activity>
+        <activity android:name=".ShowLogsActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
