--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,15 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <application
-        android:name=".InsufflatorSimApp"
+        android:name=".application.InsufflatorSimApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".IntroActivity"
+            android:name=".activities.IntroActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,21 +29,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".InsufflatorVisningActivity"
+            android:name=".activities.InsufflatorVisningActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".VaelgRolleActivity"
+            android:name=".activities.VaelgRolleActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".VaelgOpgaveActivity"
+            android:name=".activities.VaelgOpgaveActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".VaelgScenarieActivity"
+            android:name=".activities.VaelgScenarieActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".VaelgTablet"
+            android:name=".activities.VaelgTabletActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".ShowLogsActivity"
+        <activity android:name=".activities.ShowLogsActivity"
             android:screenOrientation="landscape" />
     </application>
 
