--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <activity
             android:name=".activities.VaelgTabletActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".activities.ShowLogsActivity"
+        <activity android:name=".dummy.ShowLogsActivity"
             android:screenOrientation="landscape" />
     </application>
 
